<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/f1_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screen_background">
        </ImageView>

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logo">
        </ImageView>
    </FrameLayout>

    <android.example.shopfriendly.utils.msptextviewbold
        android:id="@+id/tv_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textColor="@color/PrimaryText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f1_header_image">
    </android.example.shopfriendly.utils.msptextviewbold>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/SecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title1">

        <android.example.shopfriendly.utils.sfedittext
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/PrimaryText"
            android:textSize="@dimen/et_textSize"
            android:autofillHints="emailAddress"
            tools:text="abc@gmail.com"
            android:hint="@string/et_hint_email_id">
        </android.example.shopfriendly.utils.sfedittext>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/SecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

      <android.example.shopfriendly.utils.sfedittext
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/PrimaryText"
            android:autofillHints="password"
            android:textSize="@dimen/et_textSize"
            tools:text="123456"
            android:hint="@string/et_hint_password">
        </android.example.shopfriendly.utils.sfedittext>
    </com.google.android.material.textfield.TextInputLayout>

    <android.example.shopfriendly.utils.msptextview
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/SecondaryText"
        android:textSize="@dimen/ForgotPasswordTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password">

    </android.example.shopfriendly.utils.msptextview>

    <android.example.shopfriendly.utils.SFButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password">

    </android.example.shopfriendly.utils.SFButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <android.example.shopfriendly.utils.msptextview
            android:id="@+id/tv_don_t_have_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickableTextviewPadding"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/SecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize">

        </android.example.shopfriendly.utils.msptextview>

        <android.example.shopfriendly.utils.msptextviewbold
            android:id="@+id/tv_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickableTextviewPadding"
            android:text="@string/register"
            android:textColor="@color/SecondaryText">

        </android.example.shopfriendly.utils.msptextviewbold>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>